# snip_assist

./: .env.example  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Dockerfile  Dockerfile.api  Dockerfile.bot  Dockerfile.rag  README.md  docker-compose.yml  pyproject.toml  requirements.api.txt  requirements.bot.txt  requirements.rag.txt  requirements.txt
api/: __init__.py  config.py  main.py
app/: __init__.py  main.py
app/bot/: __init__.py
app/bot/handlers/: __init__.py  help.py  limits.py  query.py  start.py  stats.py
app/bot/keyboards/: main.py
app/bot/middleware/: limits.py  logging.py  throttling.py
app/core/: __init__.py  config.py  database.py  rag.py  rag_indexer.py
app/services/: __init__.py  query_service.py
data/docs/raw/: sp_30.13330.docx  Приказ Минтруда РФ от 01.06.2015 N 336Н Об утверждении Правил по охране труда в строительстве.docx  Приказ Минтруда РФ от 01.06.2015 N 336Н Об утверждении Правил по охране труда в строительстве.rtf
data/docs/text/: GOST26633-2015.txt  SNiP_3.03.01-87_clean.txt  SP2.2.3670-20_trud.txt  SP_1.13130.2020.txt  cleaned_snip_2_02_01_83.txt  pue_final_readable.txt  snip-2-02-01-83-osnovaniya-zdaniy-i-sooruzheniy.txt  snip-21-01-97-pozharnaya-bezopasnost-zdanij-i-sooruzhenij_final_cleaned.txt  snip-3-04-01-87-izolyacionnye-i-otdelochnye-pokrytiya.txt  snip-3-05-03-85-teplovye-seti_FINAL_clean.txt  snip-42-01-2002-gazoraspredelitelnye-sistemy.txt  sp-131-13330-2012_clean_v3_annotated.txt  sp-17-13330-2017-krovli.txt  sp-31-13330-2012.txt  sp-32-13330-2012-kanalizaciya-naruzhnye-seti-i-sooruzheniya.txt  sp-45-13330-2017-zemlyanye-sooruzheniya-osnovaniya-i-fundamenty.txt  sp-50-13330-2012-teplovaya-zashhita-zdanij_from_docx.txt  sp-55-13330-2016-doma-zhilye-odnokvartirnye.txt  sp-60-13330-2012-otoplenie-ventilyaciya-i-kondicionirovanie-vozduxa.txt  sp-61-13330-2012-teplovaya-izolyaciya-oborudovaniya-i-truboprovodov.txt  sp-62-13330-2011.txt  sp-70-13330-2012.txt  sp-71-13330-2017-izolyacionnye-i-otdelochnye-pokrytiya.txt  sp_30.13330_cleaned.txt  Приказ_Минтруда_336н_Охрана_труда_в_строительстве.txt
rag/: __init__.py  config.py  main.py  rag_engine.py
tests/: conftest.py  test_bot.py  test_rag.py
