[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construction-rag-bot"
version = "0.0.1"
description = "AI-ассистент для прорабов и технических директоров в Telegram. Позволяет быстро находить и интерпретировать нормативные документы (ГОСТ/СНИП) с подтверждёнными ссылками."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nikita Goman", email = "nikitagoman3@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]

dependencies = [
    "aiogram==3.15.0",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "llamaindex==0.12.4",
    "llamaindex-vector-stores-chroma==0.4.2",
    "llamaindex-llms-transformers==0.3.0",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "SQLAlchemy==2.0.35",
    "aiosqlite==0.20.0",
    "torch==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.23.7",
    "pytest-mock==3.12.0",
    "pytest-cov==5.0.0",
    "black==23.10.1",
    "flake8==6.0.0",
    "isort==5.12.0",
]
prod = [
    # Зависимости, специфичные для продакшена, если есть
]

[project.urls]
Homepage = "https://github.com/yourusername/construction-rag-bot"
Repository = "https://github.com/yourusername/construction-rag-bot"
"Bug Tracker" = "https://github.com/yourusername/construction-rag-bot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311']
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120