[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snip_assist_microservices"
version = "0.1.0"
description = "Микросервисная архитектура AI-ассистента для прорабов и технических директоров в Telegram. Позволяет быстро находить и интерпретировать нормативные документы (ГОСТ/СНИП) с подтверждёнными ссылками."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nikita Goman", email = "nikitagoman3@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
    "Typing :: Typed",
]

# Зависимости для разработки (включая тестирование и форматирование)
dependencies = [
    # Для удобства разработки и тестирования в целом (не обязательно в продакшен образах)
    # pytest и его плагины (для запуска тестов из корня или для общих фикстур)
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    # Инструменты форматирования и стилизации кода
    "black>=23.10.1",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    # python-dotenv для загрузки переменных окружения в среде разработки
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# dev зависимости дублированы в основные для удобства разработки в корне
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "black>=23.10.1",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "python-dotenv>=1.0.1",
]
# prod - может быть пустым или содержать зависимости, специфичные для продакшена,
# но обычно образы собираются с конкретными requirements.*.txt для каждого сервиса
prod = [
    # Пример: gunicorn==21.2.0  # Если бы использовался WSGI сервер для какого-то сервиса
]

[project.urls]
Homepage = "https://github.com/NikGoman/snip_assist"
Repository = "https://github.com/NikGoman/snip_assist"
"Bug Tracker" = "https://github.com/NikGoman/snip_assist/issues"

# Убираем настройки пакета, так как проект больше не собирается как единый пакет
# [tool.setuptools.packages.find]
# where = ["."]
# include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short -x" # -x для остановки на первом же фейле
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration",
]

[tool.black]
line-length = 120
target-version = ['py311'] # Обновлено до используемой версии Python
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
# Добавим настройку для сортировки импортов по пакетам сервисов
known_first_party = ["app", "api", "rag"]
known_third_party = ["aiogram", "fastapi", "llamaindex", "sqlalchemy", "httpx", "pydantic", "uvicorn", "python-dotenv", "torch", "transformers", "chromadb", "pytest", "black", "isort", "flake8"]

# [tool.mypy] # Опционально: добавить настройки mypy, если используется
# python_version = "3.11"
# warn_return_any = true
# warn_unused_configs = true
# warn_unused_ignores = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# disallow_untyped_decorators = true
